# sol_alive

./: README.md  pyproject.toml  sol-alive-bot.session
src/sol_alive/: __init__.py  __main__.py  bot.py
